--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 	<header>Shaw's News</header>
 	<div class="container">
 	<div class="box-1">
-		<ul><h2>Latest News Articles</h2>
+		<ul><h2>Latest News Section</h2>
 			<li>Article 1</li>
 			<li>Article 2</li>
 			<li>Article 3</li>
