--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 	<header>Shaw's News</header>
 	<div class="container">
 	<div class="box-1">
-		<ul><h2>Latest News Section</h2>
+		<ul><h3>Latest News Articles</h3>
 			<li>Article 1</li>
 			<li>Article 2</li>
 			<li>Article 3</li>
@@ -31,7 +31,7 @@
 
 		
 	<div class="box-3">
-		<h2>Pictorial News</h2>
+		<h3>Pictorial News</h3>
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="img">
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="img">
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="img">
