--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 
 	<header>Shaw's News</header>
 	<div class="container">
-	<div class="box-1">
+	<div class="latest-news-section">
 		<h3>Latest News Articles</h3>
 		<ul>
 			<li>Article 1</li>
@@ -31,7 +31,7 @@
 
 
 		
-	<div class="box-3">
+	<div class="pictorial-news-section">
 		<h3>Pictorial News</h3>
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="img">
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="img">
